# aoc2019

./: intcode.py  pyproject.toml
day02/: main.py
day05/: main.py
day07/: main.py
day09/: main.py
day11/: main.py
day13/: main.py
day15/: main.py
day17/: main.py
day19/: main.py
