[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = ""
authors = ["Peter Dwyer <peter.dwyer@clanwilliamhealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
scalene = "^1.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
